--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -6,6 +6,96 @@
     <title>Content Manager - Flaming Books</title>
   </head>
   <body>
+    <!-- Prevent auto-initialization that triggers Netlify detection -->
+    <script>
+      window.CMS_MANUAL_INIT = true;
+    </script>
+
+    <!-- Load Decap CMS -->
     <script src="https://unpkg.com/decap-cms@latest/dist/decap-cms.js"></script>
+
+    <!-- Manually initialize CMS with your config -->
+    <script>
+      CMS.init({
+        config: {
+          backend: {
+            name: 'github',
+            repo: 'Flaming-31/flaming-reads-reimagined',
+            branch: 'main',
+            auth_endpoint: 'https://api.decapcms.org/auth',
+            app_id: 'xxxxxxx' // replace with your actual Client ID
+          },
+          publish_mode: 'editorial_workflow',
+          media_folder: 'public/images/uploads',
+          public_folder: '/images/uploads',
+          collections: [
+            {
+              name: 'products',
+              label: 'Books',
+              folder: 'content/books',
+              create: true,
+              slug: '{{slug}}',
+              fields: [
+                {label: 'Title', name: 'title', widget: 'string'},
+                {label: 'Author', name: 'author', widget: 'string'},
+                {label: 'Description', name: 'description', widget: 'text'},
+                {label: 'Price', name: 'price', widget: 'number'},
+                {label: 'Category', name: 'category', widget: 'select', options: ["Theology","Devotional","Christian Living","Bible Study","Biography","Children","Youth","Fiction","Reference"]},
+                {label: 'Image', name: 'image', widget: 'image'},
+                {label: 'Featured', name: 'featured', widget: 'boolean', default: false},
+                {label: 'Stock', name: 'stock', widget: 'number', default: 0},
+                {label: 'ISBN', name: 'isbn', widget: 'string', required: false},
+                {label: 'Publisher', name: 'publisher', widget: 'string', required: false},
+                {label: 'Publication Date', name: 'publication_date', widget: 'date', required: false},
+                {label: 'Pages', name: 'pages', widget: 'number', required: false}
+              ]
+            },
+            {
+              name: 'events',
+              label: 'Events',
+              folder: 'content/events',
+              create: true,
+              slug: '{{slug}}',
+              fields: [
+                {label: 'Title', name: 'title', widget: 'string'},
+                {label: 'Description', name: 'description', widget: 'text'},
+                {label: 'Date', name: 'date', widget: 'datetime'},
+                {label: 'Time', name: 'time', widget: 'string'},
+                {label: 'Location', name: 'location', widget: 'string'},
+                {label: 'Image', name: 'image', widget: 'image'},
+                {label: 'Past Event', name: 'is_past', widget: 'boolean', default: false}
+              ]
+            },
+            {
+              name: 'authors',
+              label: 'Authors',
+              folder: 'content/authors',
+              create: true,
+              slug: '{{slug}}',
+              fields: [
+                {label: 'Name', name: 'name', widget: 'string'},
+                {label: 'Bio', name: 'bio', widget: 'text'},
+                {label: 'Image', name: 'image', widget: 'image'},
+                {label: 'Book Count', name: 'book_count', widget: 'number', default: 0}
+              ]
+            },
+            {
+              name: 'testimonials',
+              label: 'Testimonials',
+              folder: 'content/testimonials',
+              create: true,
+              slug: '{{slug}}',
+              fields: [
+                {label: 'Name', name: 'name', widget: 'string'},
+                {label: 'Email', name: 'email', widget: 'string'},
+                {label: 'Rating', name: 'rating', widget: 'number', min: 1, max: 5},
+                {label: 'Message', name: 'message', widget: 'text'},
+                {label: 'Approved', name: 'approved', widget: 'boolean', default: false}
+              ]
+            }
+          ]
+        }
+      });
+    </script>
   </body>
 </html>
