--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -1,3 +1,16 @@
+<!-- <!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Content Manager - Flaming Books</title>
+  </head>
+  <body>
+    <script src="https://unpkg.com/decap-cms@latest/dist/decap-cms.js"></script>
+  </body>
+</html> -->
+
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -7,5 +20,14 @@
   </head>
   <body>
     <script src="https://unpkg.com/decap-cms@latest/dist/decap-cms.js"></script>
+
+    <script>
+      CMS.init({
+        config: {
+          load_config_file: true,
+          config_file: "/admin/config.yml"
+        }
+      });
+    </script>
   </body>
 </html>
