--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -10,7 +10,6 @@
   </body>
 </html> -->
 
-
 <!DOCTYPE html>
 <html>
   <head>
@@ -19,15 +18,21 @@
     <title>Content Manager - Flaming Books</title>
   </head>
   <body>
+    <script>
+      window.CMS_MANUAL_INIT = true;
+    </script>
+
     <script src="https://unpkg.com/decap-cms@latest/dist/decap-cms.js"></script>
 
     <script>
-      CMS.init({
-        config: {
-          load_config_file: true,
-          config_file: "/admin/config.yml"
-        }
-      });
+      window.onload = function() {
+        CMS.init({
+          config: {
+            load_config_file: true,
+            config_file: "/admin/config.yml"
+          }
+        });
+      };
     </script>
   </body>
 </html>
